# squircle

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  square2circle.py  square2disc.py  squircle.py  test.py  test_squircle.py  tox.ini
.github/workflows/: run-tests.yml
