[metadata]
name = squircle
version = 0.2.2
author = Boris Verkhovskiy
author_email = boris.verk@gmail.com
description = Stretch circles into squares and squish squares into circles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/verhovsky/squircle
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
py_modules =
    squircle
python_requires = >=3.6

[options.extras_require]
numpy = numpy
